# fast-ipam

./: .gitignore  README.md
api/: .python-version  main.py  pyproject.toml  settings.py
api/bruno/fast-ipam/: bruno.json
api/bruno/fast-ipam/pool/: Delete Pool by Id.bru  Get All Pools.bru  Get Pool by Id.bru
api/bruno/fast-ipam/project/: Create Project.bru  Get Project By Id.bru
api/config/: exceptions.py  responses.py
api/v1/: main.py
api/v1/dependencies/: exceptions.py  interfaces.py
api/v1/pool/: main.py
api/v1/pool/core/: create.py  data.py  models.py
api/v1/project/: main.py
api/v1/project/core/: data.py  models.py  query.py  requests.py  services.py
