[tool.poetry]
name = "ipam-api"
version = "0.1.0"
description = "IPAM solution accessible via RESTAPIs"
authors = ["Khizar Malik <khizarmalik.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
asyncio = "^3.4.3"
pydantic = "^2.10.4"
pynamodb = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
